--- a/ssz-api/pom.xml
+++ b/ssz-api/pom.xml
@@ -16,6 +16,10 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>com.ssz</groupId>
+			<artifactId>ssz-mul</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
 		</dependency>
