--- a/ssz-dependencies/ssz-parent/pom.xml
+++ b/ssz-dependencies/ssz-parent/pom.xml
@@ -23,6 +23,10 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.ssz</groupId>
+            <artifactId>ssz-mul</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
         </dependency>
