--- a/ssz-gateway/ssz-gateway/pom.xml
+++ b/ssz-gateway/ssz-gateway/pom.xml
@@ -18,10 +18,10 @@
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>com.ssz</groupId>-->
-<!--            <artifactId>ssz-mul</artifactId>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>com.ssz</groupId>
+            <artifactId>ssz-mul</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
